--- a/src/index.css
+++ b/src/index.css
@@ -163,3 +163,32 @@ button {
   margin-top: 20px;
   margin-right: 7.5px;
 }
+
+.title-container {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  display: flex;
+  width: 50px; 
+  height: auto;
+  margin-right: 10px;
+}
+
+/* Apply this style only on mobile devices */
+@media (max-width: 1100px) {
+
+  input {
+    pointer-events: none;
+  }
+
+  .title-container {
+    display:none;
+  }
+  
+  .logo {
+    display:none;
+  }
+
+}
