--- a/src/index.css
+++ b/src/index.css
@@ -126,17 +126,19 @@ button {
   height: 3rem;
   display: flex;
   justify-content: center;
+  align-items: center; /* Center content vertically within the banner */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   transition: font-size 0.5s;
-}
-
-.loser {
-  font-size: 0rem;
-}
-
-.winner {
+  width: 100%; /* Optional: If you want the banner to stretch across the full width of the screen */
+  text-align: center; /* Ensure the text within the banner is centered */
   font-size: 3rem;
   transition-timing-function: ease-out;
+  color: #f5deb3;
 }
+
 
 .modal {
   display: flex;
@@ -177,6 +179,20 @@ button {
   margin-right: 10px;
 }
 
+/* Full-screen overlay */
+.overlay {
+  position: fixed; /* Sticks the overlay to the viewport */
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+  display: flex;
+  justify-content: center;
+  align-items: center; /* Center the banner within the overlay */
+  z-index: 999; /* Ensure it stays on top */
+}
+
 /* Apply this style only on mobile devices */
 @media (max-width: 1100px) {
 
@@ -188,4 +204,7 @@ button {
     display:none;
   }
 
+  .banner {
+    font-size: 2rem;
+  }
 }
