--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   min-width: 320px;
   min-height: 100svh;
 }
 
 :root {
-  --background-color: #e2e2e2;
+  --background-color: #fdfdfd;
   --past-color: #adadad;
   --text-color: #313131;
 }
@@ -18,6 +17,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   height: 100svh;
   overflow: hidden;
+}
+
+.box-svg {
+  height: 50svh;
+  width: 50svh;
 }
 
 path, circle, rect {
@@ -188,13 +192,14 @@ button {
 .title-container {
   display: flex;
   align-items: center;
+  justify-content: center;
+  margin-bottom: 80px;
 }
 
-.logo {
+.povrzilogo {
   display: flex;
-  width: 50px; 
+  width: 20%; 
   height: auto;
-  margin-right: 10px;
 }
 
 
@@ -202,11 +207,11 @@ button {
 @media (max-width: 1100px) {
 
   .title-container {
-    display:none;
+    margin-bottom: 10px;
   }
   
-  .logo {
-    display:none;
+  .povrzilogo {
+    width: 200px;
   }
 
   .banner {
@@ -216,4 +221,10 @@ button {
   .new-combination{
     font-size: 1rem;
   }
+
+  input {
+    font-size: 40px;
+  }
+  
+  
 }
